# AngryCAT

./: .gitignore  LICENSE  README.md  manual_send.py  paging.py  protocol.py  pyproject.toml  test.py  testsetup.md  usage_example.py
ZenCrypto/: aes_cmac.py  aes_cmac_collide.py  calc_mont_inv.py  cmac_calc.py  generate_collision.py  try_factor.py
experiments/: .gitignore  bitflips.py  bitflips_plot_timing.py  bitflips_plot_xy.py  bitflips_plot_xy_clusters.py  bitflips_plot_xy_timing.py
power/: get_led.sh  power.sh  power_long.sh  power_short.sh  reset.sh
samples/: subleq.py
src/angrycat/: __init__.py  protocol.py  util.py
src/angrycat/protocol/: __init__.py  base.py  core.py  dsm.py  ibs.py  ids.py  machine_code.py  msr.py  paging.py  ping.py  reboot.py  status.py  ucode.py
src/angrycat/testsetup/: __init__.py  architectures.py  base.py  registry.py
src/angrycat/testsetup/testsetups/: __init__.py  ryzen5_cpus.py
src/angrycat/tools/: manual_send.py  paging.py
tests/: run_tests.py  test_applyucode.py  test_applyucodeexecutetest.py  test_applyucodeexecutetest_core0.py  test_applyucodeexecutetest_core1.py  test_executemachinecode_core0.py  test_executemachinecode_core1.py  test_faultedcore.py  test_flipbits.py  test_getcorecount.py  test_getlasttestresult.py  test_getmsgsize.py  test_multiping.py  test_ping.py  test_readmsr.py  test_readmsroncore.py  test_sendmachinecode.py  test_senducode.py  test_startcore.py  test_torture_allcores.py
testsetups/: README.md  __init__.py  example_config.py  example_setup.py
testsetups/templates/: README.md
(+2 files in other folders)
