[project]
name = "angrycat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
manual_send = "angrycat.tools.manual_send:main"
paging = "angrycat.tools.paging:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/angrycat"]
