[project]
name = "angrycat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keystone-engine>=0.9.2",
    "requests>=2.32.5",
    "zenutils",
]

[project.scripts]
manual_send = "angrycat.tools.manual_send:main"
paging = "angrycat.tools.paging:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/angrycat"]

[tool.hatch.build.targets.wheel.sources]
"testsetups" = "src/angrycat/testsetup/testsetups"

[tool.uv.sources]
zenutils = { git = "https://github.com/AngryUEFI/ZenUtils" }
